--- a/example/index.html
+++ b/example/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Playground</title>
+    <script src="https://cdn.tailwindcss.com"></script>
+    <title>Use Tools Playground</title>
   </head>
 
   <body>
