--- a/example/index.html
+++ b/example/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <script src="https://cdn.tailwindcss.com"></script>
+    <link href="/dist/output.css" rel="stylesheet">
     <title>Use Tools Playground</title>
   </head>
 
-  <body>
+  <body class="dark:bg-stone-800">
     <div id="root"></div>
     <script src="./index.tsx"></script>
   </body>
